# MenadzerWydatkow

./: AddTransactionDialog.ui  CMakeLists.txt  README.md  addtransactiondialog.cpp  addtransactiondialog.h  alltransactions.cpp  alltransactions.h  alltransactions.ui  category.cpp  category.h  colormodel.cpp  colormodel.h  databasemanager.cpp  databasemanager.h  editdialog.cpp  editdialog.h  editdialog.ui  globals.cpp  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  removedialog.cpp  removedialog.h  removedialog.ui  resources.qrc  transaction.cpp  transaction.h  transactionrepository.cpp  transactionrepository.h
UML/: MenadzerWydatkow.mdj
